--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "python.linting.pylintEnabled": false,
-    "python.pythonPath": "C:\\Python27\\python2.exe"
+    "python.pythonPath": "C:\\Users\\QI157K\\Anaconda3\\python.exe"
 }
